# openos

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements-lock.txt
configs/: p1_06_bundle_contract.json  p1_a05_implementation_review.json  p1_a05_size_robustness.json  p1_a05_size_robustness_preregister.json  p1_b02_evaluation_contract.json  smoke.json  stg_bc.json  stg_model_comparison.json  stg_ppo.json  stg_ppo_5seed.json  stg_task_gnn.json
doc/: CPOP与精确Oracle设计.md  G1正确性门禁评审.md  G1独立复核记录.md  P0-03独立复核记录.md  P0-06独立复核记录.md  P0-08失败统计与运行清单.md  P0-08独立复核记录.md  P0-09MVP复现与失败分析.md  P0-10openEuler验证记录.md  P0-10独立复核记录.md  P0-11算法总览与限制.md  P0-12发布与复现手册.md  P0-13五分钟演示与故障恢复.md  P0-B03独立复核记录.md  P0收口独立复核记录.md  P1-03PPO断点续训设计与验收.md  P1-03独立复核记录.md  P1-03第二轮独立复核记录.md  P1-06最终模型结果包规程.md  P1-A01HEFT教师与BC基线.md  P1-A01独立复核记录.md  P1-A02MaskedPPO设计与验收.md  P1-A02独立复核记录.md  P1-A03TaskGNN设计与验收.md  P1-A03正式对照报告.md  P1-A03正式结果独立复核记录.md  P1-A03独立复核记录.md  P1-A04五种子扩展独立复核记录.md  P1-A04五种子扩展设计与正式结果.md  P1-A05Size-OOD实现与训练前门禁.md  P1-A05Size-OOD实现独立复核记录.md  P1-A05Size-OOD稳健性设计与预注册.md  P1-A05Size-OOD设计独立复核记录.md  P1-A05正式负结果与停止记录.md  P1-A05正式负结果独立复核记录.md  P1-A05正式运行与G3收口规程.md  P1-B01公开基准与许可证.md  P1-B01独立复核记录.md  P1-B02OOD证据路径独立复核记录.md  P1-B02OOD证据路径第三轮独立复核记录.md  (+19 more)
examples/: __init__.py  external_heft_scheduler.py
schemas/: scenario.schema.json
scripts/: analyze_p1_a05_size_robustness.py  build_p1_06_bundle.py  build_release_bundle.py  build_stg_manifest.py  compare_p1_a05_development.py  compare_task_gnn_mlp.py  fetch_stg_benchmark.py  openeuler_smoke.sh  review_p1_a05_development.py  run_demo.ps1  run_model_comparison.py  (+2 more)
(+55 files in other folders)
