[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trisched-mvp"
version = "0.1.0"
description = "Minimal executable DAG scheduler for cloud-edge-device heterogeneous resources"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
trisched = "trisched.cli:main"

[tool.setuptools.packages.find]
include = ["trisched*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

