[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trisched-mvp"
version = "0.1.0"
description = "Minimal executable DAG scheduler for cloud-edge-device heterogeneous resources"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
  "numpy>=1.24",
]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.urls]
Repository = "https://github.com/Amazingj17/openos"

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
trisched = "trisched.cli:main"

[tool.setuptools.packages.find]
include = ["trisched*"]

[tool.setuptools.data-files]
"share/trisched/schemas" = ["schemas/scenario.schema.json"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
